src/ca3/yapl/parser/Parser.java
/* Generated By:JavaCC: Do not edit this line. Parser.java */
package ca3.yapl.parser;

import ca3.yapl.exceptions.IllegalUseException;
import ca3.yapl.exceptions.ProcedureNameMismatchException;
import ca3.yapl.exceptions.ProgramNameMismatchException;
import ca3.yapl.exceptions.YAPLException;
import ca3.yapl.impl.Symbol;
import ca3.yapl.impl.SymbolTable;
import ca3.yapl.interfaces.ISymbol;
import ca3.yapl.lib.CompilerMessage;
import java.io.FileInputStream;
import java.io.IOException;

public class Parser implements ParserConstants {
    private static SymbolTable symbolTable = new SymbolTable();
    private static Token tProgramName = null;

    public static void main(String args[]) {
        try {
            String file;
            if (args == null || args.length < 1) {
                file = "testFiles/test14.yapl";
            } else {
                file = args[0];
            }

            Parser parser = new Parser(new FileInputStream(file));
            parser.Program();

            CompilerMessage.printOK(tProgramName.image);
        } catch (ParseException pe) {
            CompilerMessage.printError(pe, tProgramName.image);
        } catch (YAPLException ye) {
            CompilerMessage.printError(ye, tProgramName.image);
        } catch (IOException e) {
            System.err.println("something went wrong" + e);
        }
    }

  static final public void RelOp() throws ParseException, YAPLException {
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case LT:
      jj_consume_token(LT);
      break;
    case LEQ:
      jj_consume_token(LEQ);
      break;
    case GEQ:
      jj_consume_token(GEQ);
      break;
    case GT:
      jj_consume_token(GT);
      break;
    default:
      jj_la1[0] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
  }

  static final public void EqualOp() throws ParseException, YAPLException {
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case EQ:
      jj_consume_token(EQ);
      break;
    case NEQ:
      jj_consume_token(NEQ);
      break;
    default:
      jj_la1[1] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
  }

  static final public void AddOp() throws ParseException, YAPLException {
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case PLUS:
      jj_consume_token(PLUS);
      break;
    case MINUS:
      jj_consume_token(MINUS);
      break;
    default:
      jj_la1[2] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
  }

  static final public void MulOp() throws ParseException, YAPLException {
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case MULT:
      jj_consume_token(MULT);
      break;
    case DIV:
      jj_consume_token(DIV);
      break;
    case MOD:
      jj_consume_token(MOD);
      break;
    default:
      jj_la1[3] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
  }

  static final public void Literal() throws ParseException, YAPLException {
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case TRUE:
      jj_consume_token(TRUE);
      break;
    case FALSE:
      jj_consume_token(FALSE);
      break;
    case NUMBER:
      jj_consume_token(NUMBER);
      break;
    default:
      jj_la1[4] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
  }

  static final public void Selector() throws ParseException, YAPLException {
    Token tIdent;
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case SQUARE_BRACKET_OPEN:
      jj_consume_token(SQUARE_BRACKET_OPEN);
      Expr();
      jj_consume_token(SQUARE_BRACKET_CLOSE);
      break;
    case DOT:
      jj_consume_token(DOT);
      tIdent = jj_consume_token(IDENT);
      break;
    default:
      jj_la1[5] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case SQUARE_BRACKET_OPEN:
    case DOT:
      Selector();
      break;
    default:
      jj_la1[6] = jj_gen;
      ;
    }
  }

  static final public void ArrayLen() throws ParseException, YAPLException {
    Token tIdent;
    jj_consume_token(HASH);
    tIdent = jj_consume_token(IDENT);
            ISymbol s = symbolTable.lookup(tIdent);
            if (s.getKind() != ISymbol.Variable && s.getKind() != ISymbol.Parameter) {
                {if (true) throw new IllegalUseException(s, tIdent);}
            }
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case SQUARE_BRACKET_OPEN:
    case DOT:
      Selector();
      break;
    default:
      jj_la1[7] = jj_gen;
      ;
    }
  }

  static final public void PrimaryExpr() throws ParseException, YAPLException {
    Token tIdent;
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case TRUE:
    case FALSE:
    case NUMBER:
      Literal();
      break;
    case OPEN_PARENTH:
      jj_consume_token(OPEN_PARENTH);
      Expr();
      jj_consume_token(CLOSE_PARENTH);
      break;
    default:
      jj_la1[9] = jj_gen;
      if (jj_2_1(2)) {
        ProcedureCall();
      } else {
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case IDENT:
          tIdent = jj_consume_token(IDENT);
            ISymbol s = symbolTable.lookup(tIdent);
            if (s.getKind() != ISymbol.Variable && s.getKind() != ISymbol.Constant && s.getKind() != ISymbol.Parameter)
                {if (true) throw new IllegalUseException(s, tIdent);}
          switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
          case SQUARE_BRACKET_OPEN:
          case DOT:
            Selector();
            break;
          default:
            jj_la1[8] = jj_gen;
            ;
          }
          break;
        case HASH:
          ArrayLen();
          break;
        default:
          jj_la1[10] = jj_gen;
          jj_consume_token(-1);
          throw new ParseException();
        }
      }
    }
  }

  static final public void UnaryExpr() throws ParseException, YAPLException {
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case PLUS:
    case MINUS:
      AddOp();
      break;
    default:
      jj_la1[11] = jj_gen;
      ;
    }
    PrimaryExpr();
  }

  static final public void MulExpr() throws ParseException, YAPLException {
    UnaryExpr();
    label_1:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case MULT:
      case DIV:
      case MOD:
        ;
        break;
      default:
        jj_la1[12] = jj_gen;
        break label_1;
      }
      MulOp();
      UnaryExpr();
    }
  }

  static final public void AddExpr() throws ParseException, YAPLException {
    MulExpr();
    label_2:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case PLUS:
      case MINUS:
        ;
        break;
      default:
        jj_la1[13] = jj_gen;
        break label_2;
      }
      AddOp();
      MulExpr();
    }
  }

  static final public void RelExpr() throws ParseException, YAPLException {
    AddExpr();
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case LT:
    case LEQ:
    case GT:
    case GEQ:
      RelOp();
      AddExpr();
      break;
    default:
      jj_la1[14] = jj_gen;
      ;
    }
  }

  static final public void EqualExpr() throws ParseException, YAPLException {
    RelExpr();
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case EQ:
    case NEQ:
      EqualOp();
      RelExpr();
      break;
    default:
      jj_la1[15] = jj_gen;
      ;
    }
  }

  static final public void CondAndExpr() throws ParseException, YAPLException {
    EqualExpr();
    label_3:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case AND:
        ;
        break;
      default:
        jj_la1[16] = jj_gen;
        break label_3;
      }
      jj_consume_token(AND);
      EqualExpr();
    }
  }

  static final public void CreationExpr() throws ParseException, YAPLException {
    jj_consume_token(NEW);
    StaticType();
    jj_consume_token(SQUARE_BRACKET_OPEN);
    Expr();
    jj_consume_token(SQUARE_BRACKET_CLOSE);
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case SQUARE_BRACKET_OPEN:
      jj_consume_token(SQUARE_BRACKET_OPEN);
      Expr();
      jj_consume_token(SQUARE_BRACKET_CLOSE);
      break;
    default:
      jj_la1[17] = jj_gen;
      ;
    }
  }

  static final public void Expr() throws ParseException, YAPLException {
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case TRUE:
    case FALSE:
    case PLUS:
    case MINUS:
    case HASH:
    case OPEN_PARENTH:
    case IDENT:
    case NUMBER:
      CondAndExpr();
      label_4:
      while (true) {
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case OR:
          ;
          break;
        default:
          jj_la1[18] = jj_gen;
          break label_4;
        }
        jj_consume_token(OR);
        CondAndExpr();
      }
      break;
    case NEW:
      CreationExpr();
      break;
    default:
      jj_la1[19] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
  }

  static final public void ArgumentList() throws ParseException, YAPLException {
    Expr();
    label_5:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case COMMA:
        ;
        break;
      default:
        jj_la1[20] = jj_gen;
        break label_5;
      }
      jj_consume_token(COMMA);
      Expr();
    }
  }

  static final public void ProcedureCall() throws ParseException, YAPLException {
    Token tIdent;
    tIdent = jj_consume_token(IDENT);
            ISymbol s = symbolTable.lookup(tIdent);
            if (s.getKind() != ISymbol.Procedure)
                {if (true) throw new IllegalUseException(s, tIdent);}
    jj_consume_token(OPEN_PARENTH);
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case NEW:
    case TRUE:
    case FALSE:
    case PLUS:
    case MINUS:
    case HASH:
    case OPEN_PARENTH:
    case IDENT:
    case NUMBER:
      ArgumentList();
      break;
    default:
      jj_la1[21] = jj_gen;
      ;
    }
    jj_consume_token(CLOSE_PARENTH);
  }

  static final public void Assignment() throws ParseException, YAPLException {
    Token tIdent;
    tIdent = jj_consume_token(IDENT);
            ISymbol s = symbolTable.lookup(tIdent);
            if (s.getKind() != ISymbol.Variable && s.getKind() != ISymbol.Parameter)
                {if (true) throw new IllegalUseException(s, tIdent);}
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case SQUARE_BRACKET_OPEN:
    case DOT:
      Selector();
      break;
    default:
      jj_la1[22] = jj_gen;
      ;
    }
    jj_consume_token(ASSIGN);
    Expr();
  }

  static final public void IfStatement() throws ParseException, YAPLException {
    jj_consume_token(IF);
    Expr();
    jj_consume_token(THEN);
    StatementList();
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case THEN:
      jj_consume_token(THEN);
      StatementList();
      break;
    default:
      jj_la1[23] = jj_gen;
      ;
    }
    jj_consume_token(ENDIF);
  }

  static final public void WhileStatement() throws ParseException, YAPLException {
    jj_consume_token(WHILE);
    Expr();
    jj_consume_token(DO);
    StatementList();
    jj_consume_token(ENDWHILE);
  }

  static final public void ReturnStatement() throws ParseException, YAPLException {
    jj_consume_token(RETURN);
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case NEW:
    case TRUE:
    case FALSE:
    case PLUS:
    case MINUS:
    case HASH:
    case OPEN_PARENTH:
    case IDENT:
    case NUMBER:
      Expr();
      break;
    default:
      jj_la1[24] = jj_gen;
      ;
    }
  }

  static final public void WriteStatement() throws ParseException, YAPLException {
    jj_consume_token(WRITE);
    jj_consume_token(STRING);
  }

  static final public void Statement() throws ParseException, YAPLException {
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case IF:
      IfStatement();
      break;
    case WHILE:
      WhileStatement();
      break;
    case RETURN:
      ReturnStatement();
      break;
    case WRITE:
      WriteStatement();
      break;
    default:
      jj_la1[25] = jj_gen;
      if (jj_2_2(3)) {
        Assignment();
      } else {
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case IDENT:
          ProcedureCall();
          break;
        case BEGIN:
        case DECLARE:
          Block();
          break;
        default:
          jj_la1[26] = jj_gen;
          jj_consume_token(-1);
          throw new ParseException();
        }
      }
    }
  }

  static final public void StatementList() throws ParseException, YAPLException {
    label_6:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case IF:
      case WHILE:
      case WRITE:
      case BEGIN:
      case RETURN:
      case DECLARE:
      case IDENT:
        ;
        break;
      default:
        jj_la1[27] = jj_gen;
        break label_6;
      }
      Statement();
      jj_consume_token(SEMICOLON);
    }
  }

  static final public void Block() throws ParseException, YAPLException {
      symbolTable.openScope(false);
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case DECLARE:
      Decl();
      break;
    default:
      jj_la1[28] = jj_gen;
      ;
    }
    jj_consume_token(BEGIN);
    StatementList();
    jj_consume_token(END);
      symbolTable.closeScope();
  }

  static final public void StaticType() throws ParseException, YAPLException {
    Token tIdent;
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case INT:
      jj_consume_token(INT);
      break;
    case BOOL:
      jj_consume_token(BOOL);
      break;
    case IDENT:
      tIdent = jj_consume_token(IDENT);
            ISymbol s = symbolTable.lookup(tIdent);
            if (s.getKind() != ISymbol.Typename)
                {if (true) throw new IllegalUseException(s, tIdent);}
      break;
    default:
      jj_la1[29] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
  }

  static final public void Type() throws ParseException, YAPLException {
    StaticType();
    label_7:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case SQUARE_BRACKET_OPEN:
        ;
        break;
      default:
        jj_la1[30] = jj_gen;
        break label_7;
      }
      jj_consume_token(SQUARE_BRACKET_OPEN);
      jj_consume_token(SQUARE_BRACKET_CLOSE);
    }
  }

  static final public void ReturnType() throws ParseException, YAPLException {
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case VOID:
      jj_consume_token(VOID);
      break;
    case INT:
    case BOOL:
    case IDENT:
      Type();
      break;
    default:
      jj_la1[31] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
  }

  static final public void ConstDecl() throws ParseException, YAPLException {
    Token tIdent;
    jj_consume_token(CONST);
    tIdent = jj_consume_token(IDENT);
            ISymbol s = new Symbol(tIdent, ISymbol.Constant);
            symbolTable.addSymbol(s);
    jj_consume_token(CONST_ASSIGN);
    Literal();
    jj_consume_token(SEMICOLON);
  }

  static final public void VarDecl() throws ParseException, YAPLException {
    Token tIdent;
    Type();
    tIdent = jj_consume_token(IDENT);
            ISymbol s = new Symbol(tIdent, ISymbol.Variable);
            symbolTable.addSymbol(s);
    label_8:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case COMMA:
        ;
        break;
      default:
        jj_la1[32] = jj_gen;
        break label_8;
      }
      jj_consume_token(COMMA);
      tIdent = jj_consume_token(IDENT);
            s = new Symbol(tIdent, ISymbol.Variable);
            symbolTable.addSymbol(s);
    }
    jj_consume_token(SEMICOLON);
  }

  static final public void TypeDecl() throws ParseException, YAPLException {
    Token tIdent;
    jj_consume_token(RECORD);
    tIdent = jj_consume_token(IDENT);
            ISymbol s = new Symbol(tIdent, ISymbol.Typename);
            symbolTable.addSymbol(s);
            symbolTable.openScope(false);
    label_9:
    while (true) {
      VarDecl();
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case INT:
      case BOOL:
      case IDENT:
        ;
        break;
      default:
        jj_la1[33] = jj_gen;
        break label_9;
      }
    }
            symbolTable.closeScope();
    jj_consume_token(ENDRECORD);
    jj_consume_token(SEMICOLON);
  }

  static final public void Decl() throws ParseException, YAPLException {
    jj_consume_token(DECLARE);
    label_10:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case INT:
      case BOOL:
      case CONST:
      case RECORD:
      case IDENT:
        ;
        break;
      default:
        jj_la1[34] = jj_gen;
        break label_10;
      }
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case CONST:
        ConstDecl();
        break;
      case INT:
      case BOOL:
      case IDENT:
        VarDecl();
        break;
      case RECORD:
        TypeDecl();
        break;
      default:
        jj_la1[35] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
    }
  }

  static final public void FormalParam() throws ParseException, YAPLException {
    Token tIdent;
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case READONLY:
      jj_consume_token(READONLY);
      break;
    default:
      jj_la1[36] = jj_gen;
      ;
    }
    Type();
    tIdent = jj_consume_token(IDENT);
            ISymbol s = new Symbol(tIdent, ISymbol.Parameter);
            symbolTable.addSymbol(s);
            //TODO: set nex param ?? parent symbol ??

  }

  static final public void FormalParamList() throws ParseException, YAPLException {
    FormalParam();
    label_11:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case COMMA:
        ;
        break;
      default:
        jj_la1[37] = jj_gen;
        break label_11;
      }
      jj_consume_token(COMMA);
      FormalParam();
    }
  }

  static final public void Procedure() throws ParseException, YAPLException {
    Token tStartIdent;
    Token tEndIdent;
    jj_consume_token(PROCEDURE);
    ReturnType();
    tStartIdent = jj_consume_token(IDENT);
            ISymbol s = new Symbol(tStartIdent, ISymbol.Procedure);
            symbolTable.addSymbol(s);
            symbolTable.openScope(false);
    jj_consume_token(OPEN_PARENTH);
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case INT:
    case BOOL:
    case READONLY:
    case IDENT:
      FormalParamList();
      break;
    default:
      jj_la1[38] = jj_gen;
      ;
    }
    jj_consume_token(CLOSE_PARENTH);
    Block();
    tEndIdent = jj_consume_token(IDENT);
            if (!tEndIdent.image.equals(tStartIdent.image)) {if (true) throw new ProcedureNameMismatchException(tStartIdent, tEndIdent);}
            symbolTable.closeScope();
    jj_consume_token(SEMICOLON);
  }

  static final public void Program() throws ParseException, YAPLException {
    Token tEndIdent;
    jj_consume_token(PROGRAM);
    tProgramName = jj_consume_token(IDENT);
            symbolTable.openScope(false);
            ISymbol s = new Symbol(tProgramName, ISymbol.Program);
            symbolTable.openScope(true);
    label_12:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case DECLARE:
      case PROCEDURE:
        ;
        break;
      default:
        jj_la1[39] = jj_gen;
        break label_12;
      }
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case DECLARE:
        Decl();
        break;
      case PROCEDURE:
        Procedure();
        break;
      default:
        jj_la1[40] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
    }
    jj_consume_token(BEGIN);
    StatementList();
    jj_consume_token(END);
    tEndIdent = jj_consume_token(IDENT);
            if (!tEndIdent.image.equals(tProgramName.image)) {if (true) throw new ProgramNameMismatchException(tProgramName, tEndIdent);}
            symbolTable.closeScope();
            symbolTable.closeScope();
    jj_consume_token(DOT);
  }

  static private boolean jj_2_1(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_1(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(0, xla); }
  }

  static private boolean jj_2_2(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_2(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(1, xla); }
  }

  static private boolean jj_3R_22() {
    if (jj_3R_24()) return true;
    return false;
  }

  static private boolean jj_3R_24() {
    if (jj_3R_25()) return true;
    return false;
  }

  static private boolean jj_3R_14() {
    if (jj_scan_token(IDENT)) return true;
    Token xsp;
    xsp = jj_scanpos;
    if (jj_3R_15()) jj_scanpos = xsp;
    if (jj_scan_token(ASSIGN)) return true;
    if (jj_3R_16()) return true;
    return false;
  }

  static private boolean jj_3R_34() {
    if (jj_scan_token(IDENT)) return true;
    return false;
  }

  static private boolean jj_3R_21() {
    if (jj_scan_token(DOT)) return true;
    if (jj_scan_token(IDENT)) return true;
    return false;
  }

